--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,17 @@
+app.name=Map of COVID-19
+server.port=9091
+
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
-spring.datasource.url=jdbc:mysql://localhost:3306/covid19?SSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=admin
+#pring.datasource.url=jdbc:mysql://localhost:3306/covid19?SSL=false&serverTimezone=UTC
+#pring.datasource.username=root
+#pring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.datasource.tomcat.initial-size=5
 spring.jpa.open-in-view=true
+
+spring.datasource.url=jdbc:postgresql://35.241.166.83:5432/mapofcovid19
+spring.datasource.username=admin
+spring.datasource.password=1234qwer!@#$
+
