--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.show-sql=true
 spring.datasource.tomcat.initial-size=5
 spring.jpa.open-in-view=true
 
-spring.datasource.url=jdbc:postgresql://35.241.166.83:5432/mapofcovid19
-spring.datasource.username=admin
-spring.datasource.password=1234qwer!@#$
+spring.datasource.url=URL
+spring.datasource.username=ADMIN
+spring.datasource.password=PASSWORD
 
